--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,3 +3,4 @@
 @import "assets/bootstrap-sass/variables";
 
 @import '../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap';
+@import '~ngx-toastr/toastr.css';
