Pequenas alalteracoes tela de notificaca

--- a/src/app/components/notification/openNotification/open-notification.component.html
+++ b/src/app/components/notification/openNotification/open-notification.component.html
@@ -1,5 +1,45 @@
-<div>
-    <p>Imagem da capa</p>
-    <h4>Aulas de Sabado</h4>
-    <label>As aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos compromissos na semana</label>
+<div class="container">
+    <div class="row">
+        <!-- Titulo Fixo -->
+        <div class="col-md-12">
+        <h4 align="center">Aulas de Sabado</h4>
+        </div>
+        <div class="col-md-6">
+            <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
+            <br>
+        </div>
+        <!-- Texto padrão fixo -->
+        <div class="col-md-6">
+            <label align="center">As aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
+                compromissos na
+                semanas aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
+                compromissos na
+                semana
+                anas aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
+                compromissos na
+                anas aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
+                compromissos na
+                anas aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
+                compromissos na
+            </label>
+        </div>
+    </div>
+    <!-- Video no Youtube somente um, aparece e nao aparece conforme o usuario colocar ou não -->
+    <!-- Fotos que usuario pode inserir, diversas -->
+    <div class="row">
+        <div class="col-md-4">
+            <youtube-player [videoId]="id">
+            </youtube-player>
+        </div>
+        <div class="col-md-4">
+            <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
+            <br>
+        </div>
+        <div class="col-md-4">
+            <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
+            <br>
+        </div>
+    </div>
+    
+
 </div>
