--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -7,7 +7,7 @@
                 <div class="caption">
                     <h3>Aulas de Sabado</h3>
                     <p>Novas Aulas chegando...</p>
-                    <p><a class="btn btn-primary" (click)="openNotification()" role="button">Abrir</a> <a class="btn btn-default"
+                    <p><a class="btn btn-primary" (click)="openNotification(1)" role="button">Abrir</a> <a class="btn btn-default"
                             role="button">Marcar como lida</a></p>
                 </div>
             </div>
@@ -49,4 +49,5 @@
 </div>
 <div *ngIf="renderizeNotification">
         <app-open-notification></app-open-notification>
+        <button class="btn btn-primary pull-right" (click)="backNotification()" >Voltar</button>
 </div>
