--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -1,242 +1,135 @@
-body{
-    margin-top:20px;
-    background:#eee;
+.container{max-width:100%; margin:auto;}
+img{ max-width:100%;}
+.inbox_people {
+  background: #f8f8f8 none repeat scroll 0 0;
+  float: left;
+  overflow: hidden;
+  width: 40%; border-right:1px solid #c4c4c4;
 }
-.row.row-broken {
-    padding-bottom: 0;
+.inbox_msg {
+  border: 1px solid #c4c4c4;
+  clear: both;
+  overflow: hidden;
 }
-.col-inside-lg {
-    padding: 20px;
+.top_spac{ margin: 20px 0 0;}
+
+
+.recent_heading {float: left; width:40%;}
+.srch_bar {
+  display: inline-block;
+  text-align: right;
+  width: 60%;
 }
-.chat {
-    height: calc(100vh - 180px);
+.headind_srch{ padding:10px 29px 10px 20px; overflow:hidden; border-bottom:1px solid #c4c4c4;}
+
+.recent_heading h4 {
+  color: #05728f;
+  font-size: 21px;
+  margin: auto;
 }
-.decor-default {
-    background-color: #ffffff;
+.srch_bar input{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;}
+.srch_bar .input-group-addon button {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  padding: 0;
+  color: #707070;
+  font-size: 18px;
 }
-.chat-users h6 {
-    font-size: 20px;
-    margin: 0 0 20px;
+.srch_bar .input-group-addon { margin: 0 0 0 -27px;}
+
+.chat_ib h5{ font-size:15px; color:#464646; margin:0 0 8px 0;}
+.chat_ib h5 span{ font-size:13px; float:right;}
+.chat_ib p{ font-size:14px; color:#989898; margin:auto}
+.chat_img {
+  float: left;
+  width: 11%;
 }
-.chat-users .user {
-    position: relative;
-    padding: 0 0 0 50px;
-    display: block;
-    cursor: pointer;
-    margin: 0 0 20px;
-}
-.chat-users .user .avatar {
-    top: 0;
-    left: 0;
-}
-.chat .avatar {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-}
-.chat .avatar img {
-    display: block;
-    border-radius: 20px;
-    height: 100%;
-}
-.chat .avatar .status.off {
-    border: 1px solid #5a5a5a;
-    background: #ffffff;
-}
-.chat .avatar .status.online {
-    background: #4caf50;
-}
-.chat .avatar .status.busy {
-    background: #ffc107;
-}
-.chat .avatar .status.offline {
-    background: #ed4e6e;
-}
-.chat-users .user .status {
-    bottom: 0;
-    left: 28px;
-}
-.chat .avatar .status {
-    width: 10px;
-    height: 10px;
-    border-radius: 5px;
-    position: absolute;
-}
-.chat-users .user .name {
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.chat-users .user .mood {
-    font: 200 14px/20px "Raleway", sans-serif;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+.chat_ib {
+  float: left;
+  padding: 0 0 0 15px;
+  width: 88%;
 }
 
-.chat-body h6 {
-    font-size: 20px;
-    margin: 0 0 20px;
+.chat_people{ overflow:hidden; clear:both;}
+.chat_list {
+  border-bottom: 1px solid #c4c4c4;
+  margin: 0;
+  padding: 18px 16px 10px;
 }
-.chat-body .answer.left {
-    padding: 0 0 0 58px;
-    text-align: left;
-    float: left;
+.inbox_chat { height: 550px; overflow-y: scroll;}
+
+.active_chat{ background:#ebebeb;}
+
+.incoming_msg_img {
+  display: inline-block;
+  width: 6%;
 }
-.chat-body .answer {
-    position: relative;
-    max-width: 600px;
-    overflow: hidden;
-    clear: both;
+.received_msg {
+  display: inline-block;
+  padding: 0 0 0 10px;
+  vertical-align: top;
+  width: 92%;
+ }
+ .received_withd_msg p {
+  background: #ebebeb none repeat scroll 0 0;
+  border-radius: 3px;
+  color: #646464;
+  font-size: 14px;
+  margin: 0;
+  padding: 5px 10px 5px 12px;
+  width: 100%;
 }
-.chat-body .answer.left .avatar {
-    left: 0;
+.time_date {
+  color: #747474;
+  display: block;
+  font-size: 12px;
+  margin: 8px 0 0;
 }
-.chat-body .answer .avatar {
-    bottom: 36px;
-}
-.chat .avatar {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-}
-.chat .avatar img {
-    display: block;
-    border-radius: 20px;
-    height: 100%;
-}
-.chat-body .answer .name {
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 36px;
-}
-.chat-body .answer.left .avatar .status {
-    right: 4px;
-}
-.chat-body .answer .avatar .status {
-    bottom: 0;
-}
-.chat-body .answer.left .text {
-    background: #9e9e9e;
-    color: #FFFFFF;
-    border-radius: 8px 8px 8px 0;
-}
-.chat-body .answer .text {
-    padding: 12px;
-    font-size: 16px;
-    line-height: 26px;
-    position: relative;
-}
-.chat-body .answer.left .text:before {
-    left: -30px;
-    border-right-color: #9e9e9e;
-    border-right-width: 12px;
-}
-.chat-body .answer .text:before {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: 0;
-    border: 18px solid transparent;
-    border-bottom-width: 0;
-}
-.chat-body .answer.left .time {
-    padding-left: 12px;
-    color: #333333;
-}
-.chat-body .answer .time {
-    font-size: 11px;
-    line-height: 36px;
-    font-style: italic;
-    position: relative;
-    padding-bottom: 1px;
+.received_withd_msg { width: 57%;}
+.mesgs {
+  float: left;
+  padding: 30px 15px 0 25px;
+  width: 60%;
 }
 
-.chat-body .answer.right {
-    padding: 0 58px 0 0;
-    text-align: right;
-    float: right;
+ .sent_msg p {
+  background: #05728f none repeat scroll 0 0;
+  border-radius: 3px;
+  font-size: 14px;
+  margin: 0; color:#fff;
+  padding: 5px 10px 5px 12px;
+  width:100%;
+}
+.outgoing_msg{ overflow:hidden; margin:26px 0 26px;}
+.sent_msg {
+  float: right;
+  width: 46%;
+}
+.input_msg_write input {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  color: #4c4c4c;
+  font-size: 15px;
+  min-height: 48px;
+  width: 100%;
 }
 
-.chat-body .answer.right .avatar {
-    right: 0;
+.type_msg {border-top: 1px solid #c4c4c4;position: relative;}
+.msg_send_btn {
+  background: #05728f none repeat scroll 0 0;
+  border: medium none;
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  font-size: 17px;
+  height: 33px;
+  position: absolute;
+  right: 0;
+  top: 11px;
+  width: 33px;
 }
-.chat-body .answer.right .avatar .status {
-    left: 4px;
-}
-.chat-body .answer.right .text {
-    background: #46b8da;
-    color: #ffffff;
-    text-align: left;
-    border-radius: 8px 8px 0 8px;
-}
-.chat-body .answer.right .text:before {
-    right: -30px;
-    border-left-color: #46b8da;
-    border-left-width: 12px;
-}
-.chat-body .answer.right .time {
-    padding-right: 12px;
-    color: #333333;
-}
-
-.chat-body .answer-add {
-    clear: both;
-    position: relative;
-    margin: 20px -20px -20px;
-    padding: 20px;
-    background: #46be8a;
-}
-.chat-body .answer-add input {
-    border: none;
-    background: none;
-    display: block;
-    width: 100%;
-    font-size: 16px;
-    line-height: 20px;
-    padding: 0;
-    color: #ffffff;
-}
-.chat input {
-    -webkit-appearance: none;
-    border-radius: 0;
-}
-.chat-body .answer-add .answer-btn-1 {
-    background: url("http://91.234.35.26/iwiki-admin/v1.0.0/admin/img/icon-40.png") 50% 50% no-repeat;
-    right: 56px;
-}
-.chat-body .answer-add .answer-btn {
-    display: block;
-    cursor: pointer;
-    width: 36px;
-    height: 36px;
-    position: absolute;
-    top: 50%;
-    margin-top: -18px;
-}
-.chat-body .answer-add .answer-btn-2 {
-    background: url("http://91.234.35.26/iwiki-admin/v1.0.0/admin/img/icon-41.png") 50% 50% no-repeat;
-    right: 20px;
-}
-.chat input::-webkit-input-placeholder {
-   color: #fff;
-}
-
-.chat input:-moz-placeholder { /* Firefox 18- */
-   color: #fff;  
-}
-
-.chat input::-moz-placeholder {  /* Firefox 19+ */
-   color: #fff;  
-}
-
-.chat input:-ms-input-placeholder {  
-   color: #fff;  
-}
-.chat input {
-    -webkit-appearance: none;
-    border-radius: 0;
+.messaging { padding: 0 0 50px 0;}
+.msg_history {
+  height: 516px;
+  overflow-y: auto;
 }
