Deixandodo conteudo mais bonito

--- a/src/app/components/notification/openNotification/open-notification.component.html
+++ b/src/app/components/notification/openNotification/open-notification.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <!-- Titulo Fixo -->
         <div class="col-md-12">
-        <h4 align="center">Aulas de Sabado</h4>
+            <h2 align="center">Aulas de Sabado</h2>
         </div>
         <div class="col-md-6">
             <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
@@ -27,10 +27,14 @@
     <!-- Video no Youtube somente um, aparece e nao aparece conforme o usuario colocar ou não -->
     <!-- Fotos que usuario pode inserir, diversas -->
     <div class="row">
-        <div class="col-md-4">
+        <h4 align="center">Video</h4>
+        <div class="col-md-12" align="center">
             <youtube-player [videoId]="id">
             </youtube-player>
         </div>
+    </div>
+    <div align="center" class="row">
+        <h4>Album</h4>
         <div class="col-md-4">
             <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
             <br>
@@ -40,6 +44,6 @@
             <br>
         </div>
     </div>
-    
+
 
 </div>
