--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!renderizeNotification">
-    <h2>Tela de Notificação</h2>
+    <h2 align="center">Tela de Notificação</h2>
     <div class="row">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
@@ -18,8 +18,8 @@
                 <div class="caption">
                     <h3>Limpezas do banheiro</h3>
                     <p>Ajude na Limpeza</p>
-                    <p><a class="btn btn-primary" role="button">Abrir</a> <a class="btn btn-default"
-                            role="button">Marcar como lida</a></p>
+                    <p><a class="btn btn-primary" role="button">Abrir</a> <a class="btn btn-default" role="button">Marcar
+                            como lida</a></p>
                 </div>
             </div>
         </div>
@@ -29,8 +29,8 @@
                 <div class="caption">
                     <h3>Adiciona o pessoal no facebook</h3>
                     <p>Vamos todos nos conectar galera...</p>
-                    <p><a class="btn btn-primary" role="button">Abrir</a> <a class="btn btn-default"
-                            role="button">Marcar como lida</a></p>
+                    <p><a class="btn btn-primary" role="button">Abrir</a> <a class="btn btn-default" role="button">Marcar
+                            como lida</a></p>
                 </div>
             </div>
         </div>
@@ -40,14 +40,14 @@
                 <div class="caption">
                     <h3>Novo professor na area</h3>
                     <p>Um novo professor focado em body para voces...</p>
-                    <p><a class="btn btn-primary" role="button">Abrir</a> <a class="btn btn-default"
-                            role="button">Marcar como lida</a></p>
+                    <p><a class="btn btn-primary" role="button">Abrir</a> <a class="btn btn-default" role="button">Marcar
+                            como lida</a></p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <div *ngIf="renderizeNotification">
-        <app-open-notification></app-open-notification>
-        <button class="btn btn-primary pull-right" (click)="backNotification()" >Voltar</button>
+    <app-open-notification></app-open-notification>
+    <button class="btn btn-primary pull-right" (click)="backNotification()">Voltar</button>
 </div>
