--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-md-offset-3 col-md-6">
-        <h5 style="text-align: center">Realizar Login</h5>
+    <div class="col-md-offset-3 col-md-6 login-content">
+        <h5>Realizar Login</h5>
         <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
             <div class="form-group">
                 <input type="email" [formControl]="email" class="form-control" name="inputEmail3" [(ngModel)]="user.email" name="email" id="signin-email" placeholder="E-mail"
