Alteracao de texto

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -18,8 +18,7 @@
                 <div class="chat_people">
                   <div class="chat_img"> <img src="https://banner2.kisspng.com/20180522/rve/kisspng-computer-icons-avatar-sport-5b03b4dbd67f95.9985958015269695638786.jpg" alt="sunil"> </div>
                   <div class="chat_ib">
-                    <h5>Professor 1 <span class="chat_date">Dec 25</span></h5>
-                    <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI,</p>
+                    <h5>Roberto<span class="chat_date">Dec 25</span></h5>
                   </div>
                 </div>
               </div>
@@ -27,8 +26,7 @@
                 <div class="chat_people">
                   <div class="chat_img"> <img src="https://banner2.kisspng.com/20180522/rve/kisspng-computer-icons-avatar-sport-5b03b4dbd67f95.9985958015269695638786.jpg" alt="sunil"> </div>
                   <div class="chat_ib">
-                    <h5>Professor 2<span class="chat_date">Dec 25</span></h5>
-                    <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI,</p>
+                    <h5>Anderson<span class="chat_date">Dec 25</span></h5>
                   </div>
                 </div>
               </div>
@@ -40,35 +38,33 @@
                 <div class="incoming_msg_img"> <img src="https://banner2.kisspng.com/20180522/rve/kisspng-computer-icons-avatar-sport-5b03b4dbd67f95.9985958015269695638786.jpg" alt="sunil"> </div>
                 <div class="received_msg">
                   <div class="received_withd_msg">
-                    <p>Test which is a new approach to have all
-                      solutions</p>
+                    <p>Me dá uma carona hoje ?</p>
                     <span class="time_date"> 11:01 AM    |    June 9</span></div>
                 </div>
               </div>
               <div class="outgoing_msg">
                 <div class="sent_msg">
-                  <p>Test which is a new approach to have all
-                    solutions</p>
+                  <p>Sim claro.</p>
                   <span class="time_date"> 11:01 AM    |    June 9</span> </div>
               </div>
               <div class="incoming_msg">
                 <div class="incoming_msg_img"> <img src="https://banner2.kisspng.com/20180522/rve/kisspng-computer-icons-avatar-sport-5b03b4dbd67f95.9985958015269695638786.jpg" alt="sunil"> </div>
                 <div class="received_msg">
                   <div class="received_withd_msg">
-                    <p>MesLorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos</p>
+                    <p>Voce paga a gasolina ?</p>
                     <span class="time_date"> 11:01 AM    |    Yesterday</span></div>
                 </div>
               </div>
               <div class="outgoing_msg">
                 <div class="sent_msg">
-                  <p>Lorem Ipsum é simplesmente uma simulação de texto </p>
+                  <p>Podemos rachar ?</p>
                   <span class="time_date"> 11:01 AM    |    Today</span> </div>
               </div>
               <div class="incoming_msg">
                 <div class="incoming_msg_img"> <img src="https://banner2.kisspng.com/20180522/rve/kisspng-computer-icons-avatar-sport-5b03b4dbd67f95.9985958015269695638786.jpg" alt="sunil"> </div>
                 <div class="received_msg">
                   <div class="received_withd_msg">
-                    <p>Lorem Ipsum é simplesmente uma simulação de texto </p>
+                    <p>Sim.</p>
                     <span class="time_date"> 11:01 AM    |    Today</span></div>
                 </div>
               </div>
