--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-offset-3 col-md-6 login-content">
-        <h5>Realizar Login</h5>
+        <h5>Acesso a Plataforma</h5>
         <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
             <div class="form-group">
                 <input type="email" [formControl]="email" class="form-control" name="inputEmail3" [(ngModel)]="user.email" name="email" id="signin-email" placeholder="E-mail"
@@ -10,9 +10,12 @@
                 <input [formControl]="password" type="password" class="form-control"  name="inputPassword3" [(ngModel)]="user.password" name="password" id="signin-password" placeholder="Senha"
                     autocomplete="off">
             </div>
-            <button type="submit" class="btn btn-info btn-block">Login</button>
+            <button type="submit" class="btn btn-info btn-block">Entrar</button>
+            <br>
+            <a>Esqueceu sua senha ?</a>
             <br>
             <br>
+            
         </form>
     </div>
 </div>
