--- a/src/app/components/notification/openNotification/open-notification.component.html
+++ b/src/app/components/notification/openNotification/open-notification.component.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div align="center" class="row">
-        <h4>Album</h4>
+        <h4>Àlbum</h4>
         <div class="col-md-4">
             <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
             <br>
