--- a/src/app/components/class/class.component.html
+++ b/src/app/components/class/class.component.html
@@ -1,7 +1,39 @@
 <div>
-    <h3>Gerenciamento de aulas</h3>
-    <!-- Por default o dia escolhido é o atual. -->
-    <input type="date" class="form-control form-control-sm" />
-    
-    <button>Nova aula</button>
+    <h3 align="center">Gerenciamento de aulas</h3>
+    <div class="row">
+        <div class="col-md-6">
+            <label>Buscar dia</label>
+            <input type="date" class="form-control form-control-sm" />
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-3">
+            <button (click)="oldClass()" *ngIf="!newAulaControl" align="center" class="form-control form-control-sm">Nova
+                aula</button>
+        </div>
+        <div class="col-md-3">
+            <button (click)="newClass()" *ngIf="newAulaControl" align="center" class="form-control form-control-sm">Aula
+                Antiga</button>
+        </div>
+    </div>
+    <br>
+    <div class="row" *ngIf="!newAulaControl">
+        <!-- Por default o dia escolhido é o atual. -->
+        <div class="col-md-6">
+            <div class="row-fluid">
+                <label>Aula realizada ou agendada ?</label><br>
+                <input type="radio">Agendada<br>
+                <input type="radio">Realizada
+            </div>
+        </div>
+    </div>
+    <!-- Lista que se adapta a consulta de aula realizada -->
+    <!-- Caso seja aula antiga não se pode editar
+    Caso seja aula agendada se pode editar
+    Caso seja nova aula pode se inscrever -->
+    <div>
+    </div>
 </div>
+<br>
+<br>
