Alteracacao no nome da aplicacao

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="entity-footer">
-        <p class='col-md-3'>Sistema de academia 2018</p>
+        <p class='col-md-3'>by Platform FIT 2018</p>
 </div>
