Layout b basico de inscrição em aula

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav"  *ngIf="islogin">
         <li><a style="cursor:pointer;"(click)='notification()'>Notificações</a></li>
         <li><a style="cursor:pointer;"(click)='chat()'>Mensageiro</a></li>
-        <li><a style="cursor:pointer;">Aulas</a></li>
+        <li><a style="cursor:pointer;"(click)='class()'>Aulas</a></li>
         <li><a style="cursor:pointer;"(click)='evaluations()'>Avaliações fisicas</a></li>
         <li><a style="cursor:pointer;">Registro de alimentação</a></li>
         <li><a style="cursor:pointer;">Relatorio de evoluções</a></li>
