--- a/src/app/components/class/class.component.html
+++ b/src/app/components/class/class.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <h3 align="center">Gerenciamento de aulas</h3>
     <div class="row">
         <div class="col-md-6">
@@ -32,6 +32,32 @@
     <!-- Caso seja aula antiga não se pode editar
     Caso seja aula agendada se pode editar
     Caso seja nova aula pode se inscrever -->
+    <div class="row">
+        <div class="col-md-4">
+            <div style="padding-left: 0;padding-right: 0" class="jumbotron">
+                <h3>Body Jump</h3>
+                <p>Duração: 40 minutos</p>
+                <p>Data: 29/12/12 18:00</p>
+                <p>Essa aula tem como principio os fundamentos de pulo na cama elastica.</p>
+                <p>Professor: Santos</p>
+                <p><a class="btn btn-primary btn-lg" role="button">
+                    Inscrever
+                    </a></p>
+            </div>
+        </div>
+        <div class="col-md-4">
+                <div style="padding-left: 0;padding-right: 0" class="jumbotron">
+                    <h3>Body Jump</h3>
+                    <p>Duração: 40 minutos</p>
+                    <p>Data: 29/12/12 12:20</p>
+                    <p>Essa aula tem como principio os fundamentos de pulo na cama elastica.</p>
+                    <p>Professor: Igor</p>
+                    <p><a class="btn btn-primary btn-lg" role="button">
+                        Desistir
+                        </a></p>
+                </div>
+            </div>
+    </div>
     <div>
     </div>
 </div>
