--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
                 
                 <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 footer-logo">
                         <!--Alterar isso-->
-                        <h3>SISTEMA ALUNO</h3>
+                        <h3>PLATAFORMA FIT</h3>
                 </div>
                 
         </div>
