--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,3 @@
-<footer class="navbar-default navbar-fixed-bottom">
-        <div class="container-fluid footer-container">
-                
-                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 footer-logo">
-                        <!--Alterar isso-->
-                        <h3>PLATAFORMA FIT</h3>
-                </div>
-                
-        </div>
-</footer>
-
+<div class="entity-footer">
+        <p class='col-md-3'>PLATFORM FIT 2018</p>
+</div> 
