--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,9 @@
-
-
-<nav class="navbar navbar-default" style="margin-bottom: 0px" >
+<nav class="navbar navbar-default" style="margin-bottom: 0px">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+        aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -15,20 +14,20 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav"  *ngIf="islogin">
-        <li><a style="cursor:pointer;"(click)='notification()'>Notificações</a></li>
-        <li><a style="cursor:pointer;"(click)='chat()'>Mensageiro</a></li>
-        <li><a style="cursor:pointer;"(click)='class()'>Aulas</a></li>
-        <li><a style="cursor:pointer;"(click)='evaluations()'>Avaliações fisicas</a></li>
-        <li><a style="cursor:pointer;">Registro de alimentação</a></li>
+      <ul class="nav navbar-nav" *ngIf="islogin">
+        <li><a style="cursor:pointer;" (click)='notification()'>Notificações</a></li>
+        <li><a style="cursor:pointer;" (click)='chat()'>Mensageiro</a></li>
+        <li><a style="cursor:pointer;" (click)='class()'>Aulas</a></li>
+        <li><a style="cursor:pointer;" (click)='evaluations()'>Avaliações fisicas</a></li>
+        <li><a style="cursor:pointer;" (click)='foodRegister()'>Registro de alimentação</a></li>
         <li><a style="cursor:pointer;">Relatorio de evoluções</a></li>
       </ul>
       <div class="btn-sair">
-        <button type="button" *ngIf="islogin" style="cursor:pointer;"(click)="loginRedirect()" class="btn btn-danger">
+        <button type="button" *ngIf="islogin" style="cursor:pointer;" (click)="loginRedirect()" class="btn btn-danger">
           Sair
         </button>
-      </div>  
-      <ul class="nav navbar-nav"  *ngIf="!islogin">
+      </div>
+      <ul class="nav navbar-nav" *ngIf="!islogin">
         <li><a style="cursor:pointer;" (click)="loginRedirect()">Entrar</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
