--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="!renderizeNotification">
-    <h2 align="center">Tela de Notificação</h2>
+    <h2 align="center">Notificação</h2>
     <div class="row">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="../../../assets/imgs/imgcapa.jpg" alt="...">
                 <div class="caption">
-                    <h3>Aulas de Sabado</h3>
+                    <h3>Aulas de Sábado</h3>
                     <p>Novas Aulas chegando...</p>
                     <p><a class="btn btn-primary" (click)="openNotification(1)" role="button">Abrir</a> <a class="btn btn-default"
                             role="button">Marcar como lida</a></p>
