--- a/src/app/components/notification/openNotification/open-notification.component.html
+++ b/src/app/components/notification/openNotification/open-notification.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <!-- Titulo Fixo -->
         <div class="col-md-12">
-            <h2 align="center">Aulas de Sabado</h2>
+            <h2 align="center">Aulas de Sábado</h2>
         </div>
         <div class="col-md-6">
             <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
@@ -10,17 +10,9 @@
         </div>
         <!-- Texto padrão fixo -->
         <div class="col-md-6">
-            <label align="center">As aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
-                compromissos na
-                semanas aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
-                compromissos na
-                semana
-                anas aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
-                compromissos na
-                anas aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
-                compromissos na
-                anas aulas de sabado pode ser planejadas para ser uma otima solução para que tem muitos
-                compromissos na
+            <label align="center">
+                As novas aulas de body jump começaram a aparecer para serem inscritas no sabado, então fiquem de olho com essa novidade.
+                Segue o clique de uma boa musica para treino. Junto a foto da Samanta que faz 12 anos amanhã.
             </label>
         </div>
     </div>
@@ -36,11 +28,7 @@
     <div align="center" class="row">
         <h4>Àlbum</h4>
         <div class="col-md-4">
-            <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
-            <br>
-        </div>
-        <div class="col-md-4">
-            <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
+            <img src="../../../../assets/imgs/feliz.jpg" class="img-responsive img-rounded">
             <br>
         </div>
     </div>
