--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,20 +7,20 @@
         <br>
         <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
             <div class="form-group">
-                <input type="email" [formControl]="email" class="form-control" name="inputEmail3" [(ngModel)]="user.email" name="email" id="signin-email" placeholder="E-mail"
-                    autocomplete="off">
+                <input type="email" [formControl]="email" class="form-control" name="inputEmail3" [(ngModel)]="user.email"
+                    name="email" id="signin-email" placeholder="E-mail" autocomplete="off">
             </div>
             <div class="form-group">
-                <input [formControl]="password" type="password" class="form-control"  name="inputPassword3" [(ngModel)]="user.password" name="password" id="signin-password" placeholder="Senha"
-                    autocomplete="off">
+                <input [formControl]="password" type="password" class="form-control" name="inputPassword3" [(ngModel)]="user.password"
+                    name="password" id="signin-password" placeholder="Senha" autocomplete="off">
             </div>
             <button type="submit" class="btn btn-info btn-block">Entrar</button>
             <br>
-            <a>Esqueceu sua senha ?</a>
+            <a (click)="resetPassword()">Esqueceu sua senha ?</a>
             <br>
             <br>
             <br>
-            
+
         </form>
     </div>
 </div>
