Tela de progogresso

--- a/src/app/components/class/class.component.html
+++ b/src/app/components/class/class.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-6">
             <label>Buscar dia</label>
-            <input type="date" class="form-control form-control-sm" />
+            <input type="date" placeholder="ex: 12/12/2018" class="form-control form-control-sm" />
         </div>
     </div>
     <br>
@@ -41,22 +41,22 @@
                 <p>Essa aula tem como principio os fundamentos de pulo na cama elastica.</p>
                 <p>Professor: Santos</p>
                 <p><a class="btn btn-primary btn-lg" role="button">
-                    Inscrever
+                        Inscrever
                     </a></p>
             </div>
         </div>
         <div class="col-md-4">
-                <div style="padding-left: 0;padding-right: 0" class="jumbotron">
-                    <h3>Body Jump</h3>
-                    <p>Duração: 40 minutos</p>
-                    <p>Data: 29/12/12 12:20</p>
-                    <p>Essa aula tem como principio os fundamentos de pulo na cama elastica.</p>
-                    <p>Professor: Igor</p>
-                    <p><a class="btn btn-primary btn-lg" role="button">
+            <div style="padding-left: 0;padding-right: 0" class="jumbotron">
+                <h3>Body Jump</h3>
+                <p>Duração: 40 minutos</p>
+                <p>Data: 29/12/12 12:20</p>
+                <p>Essa aula tem como principio os fundamentos de pulo na cama elastica.</p>
+                <p>Professor: Igor</p>
+                <p><a class="btn btn-primary btn-lg" role="button">
                         Desistir
-                        </a></p>
-                </div>
+                    </a></p>
             </div>
+        </div>
     </div>
     <div>
     </div>
