Alteração de texto

--- a/src/app/components/progress/progress.component.html
+++ b/src/app/components/progress/progress.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-md-4">
             <div style="padding-left: 0;padding-right: 0" class="jumbotron">
-                <h3 align="Center">Ultimos 3 Meses Vs 3 a 6 Ultimos Meses</h3>
+                <h3 align="Center">Ultimos 3 Meses X 3 a 6 Ultimos Meses</h3>
                 <table class="table">
                     <tr>
                         <td>Media de Calorias(Dia): 2500 Calorias</td>
@@ -36,7 +36,7 @@
         </div>
         <div class="col-md-4">
             <div style="padding-left: 0;padding-right: 0" class="jumbotron">
-                <h3 align="Center">Ultima Avaliação Vs Penultima Avaliação</h3>
+                <h3 align="Center">Ultima Avaliação X Penultima Avaliação</h3>
                 <table class="table">
                     <tr>
                         <td>Peso</td>
