--- a/src/app/components/evaluations/evaluations.component.html
+++ b/src/app/components/evaluations/evaluations.component.html
@@ -19,12 +19,12 @@
         <table class="table">
           <tr>
             <td>Data: 11/06/2018</td>
-            <td>Professor: Kleber</td>
+            <td>Avaliador: Kleber</td>
             <td><a (click)="openVisibleDetailEvaluation()">Abrir</a></td>
           </tr>
           <tr>
             <td>Data: 11/08/2018</td>
-            <td>Professor: Kleber</td>
+            <td>Avaliador: Kleber</td>
             <td><a (click)="openVisibleDetailEvaluation()">Abrir</a></td>
           </tr>
         </table>
