--- a/src/app/components/food-register/food-register.component.html
+++ b/src/app/components/food-register/food-register.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="col-12">
-      <h3>Cadastro alimentação</h3>
+      <h3>Diario de  alimentação </h3>
     </div>
   </div>
 
@@ -23,7 +23,7 @@
   </div>
   <div class="row" *ngFor="let food of foods">
     <div class="col-12">
-      <label for="">Alimento</label>
+      <label for="">Alimento consumido</label>
       <select class="form-control" name="" id="">
         <option value="">Arroz</option>
         <option value="">Feijão</option>
