--- a/src/app/components/food-register/food-register.component.html
+++ b/src/app/components/food-register/food-register.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="col-12">
-      <h3>Diario de  alimentação </h3>
+      <h3>Diario de alimentação </h3>
     </div>
   </div>
 
@@ -21,31 +21,38 @@
       <hr>
     </div>
   </div>
-  <div class="row" *ngFor="let food of foods">
-    <div class="col-12">
-      <label for="">Alimento consumido</label>
-      <select class="form-control" name="" id="">
-        <option value="">Arroz</option>
-        <option value="">Feijão</option>
-        <option value="Carne"></option>
-      </select>
+  <ng-container *ngFor="let food of foods">
+    <div class="row">
+      <div class="col-12">
+        <label for="">Alimento consumido</label>
+        <select class="form-control" name="" id="">
+          <option value="">Arroz</option>
+          <option value="">Feijão</option>
+          <option value="Carne"></option>
+        </select>
+      </div>
     </div>
-    <div class="col-12">
-      <label for="">Tipo de medida</label>
-      <select name="" id="" class="form-control">
-        <option value="">Copo</option>
-        <option value="">Colher de sopa</option>
-        <option value="">Grama</option>
-      </select>
+    <div class="row">
+      <div class="row">
+        <div class="col-md-6 col-xs-6">
+          <label for="">Tipo de medida</label>
+          <select name="" id="" class="form-control">
+            <option value="">Copo</option>
+            <option value="">Colher de sopa</option>
+            <option value="">Grama</option>
+          </select>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <label for="">Valor total</label>
+          <input type="number" class="form-control">
+        </div>
+      </div>
     </div>
-    <div class="col-12">
-      <label for="">Valor total</label>
-      <input type="number" class="form-control">
-    </div>
-    <hr>
-  </div>
-  <div class="row">
-    <div class="col-12 text-right">
+  </ng-container>
+
+  <hr>
+  <div class="row fixed-footer">
+    <div class="col-12 text-center">
       <button class="btn btn-info" (click)="addFood()"> Adicionar alimento </button> &nbsp;
       <button class="btn btn-danger"> Cancelar </button> &nbsp;
       <button class="btn btn-success"> Salvar </button>
