--- a/src/app/components/food-register/food-register.component.scss
+++ b/src/app/components/food-register/food-register.component.scss
@@ -1,3 +1,13 @@
 .button-footer {
     margin-top:20px;
 }
+
+.fixed-footer {
+    position: fixed;
+    bottom: 0;
+    background: white;
+    left: 0;
+    right: 0;
+    padding: 15px 0;
+    z-index: 9999;
+}
