alteracao para padronizar o header

--- a/src/app/components/food-register/food-register.component.html
+++ b/src/app/components/food-register/food-register.component.html
@@ -1,11 +1,7 @@
+<div class="page-header">
+  <h1><small>Diario de alimentação</small></h1>
+</div>
 <div class="container">
-
-  <div class="row">
-    <div class="col-12">
-      <h3>Diario de alimentação </h3>
-    </div>
-  </div>
-
   <div class="row">
     <div class="col-12">
       <label for="">Data</label>
