--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,5 +1,7 @@
+<div class="page-header">
+    <h1><small>Notificação</small></h1>
+  </div>
 <div *ngIf="!renderizeNotification">
-    <h2 align="center">Notificação</h2>
     <div class="row">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
