--- a/src/app/components/class/class.component.html
+++ b/src/app/components/class/class.component.html
@@ -1,5 +1,7 @@
+<div class="page-header">
+    <h1><small>Gerenciamento de aulas</small></h1>
+  </div>
 <div class="container">
-    <h3 align="center">Gerenciamento de aulas</h3>
     <div class="row">
         <div class="col-md-6">
             <label>Buscar dia</label>
