--- a/src/app/components/progress/progress.component.html
+++ b/src/app/components/progress/progress.component.html
@@ -1,6 +1,7 @@
+<div class="page-header">
+    <h1><small>Relatório de evolução</small></h1>
+  </div>
 <div class="container">
-    <h1 align="Center">Relatório de evolução</h1>
-    <br>
     <div class="row">
         <div class="col-md-4">
             <div style="padding-left: 0;padding-right: 0" class="jumbotron">
