--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <br>
 <br>
-<div class="entity-footer">
+<!-- <div class="entity-footer">
         <p class='col-md-3'>PLATFORM FIT 2018</p>
-</div> 
+</div>  -->
