--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,11 +16,10 @@
             </div>
             <button type="submit" class="btn btn-info btn-block">Entrar</button>
             <br>
-            <a (click)="resetPassword()">Esqueceu sua senha ?</a>
+            <a class="link" (click)="resetPassword()">Esqueceu sua senha?</a>
             <br>
             <br>
             <br>
-
         </form>
     </div>
 </div>
