--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -11,19 +11,13 @@
           <input type="email" class="form-control" name="inputEmail3" [(ngModel)]="user.email" name="email" id="signin-email"
             placeholder="E-mail" autocomplete="off">
         </div>
-        <button type="submit" class="btn btn-danger btn-block">Cancelar</button> &nbsp;
-        <button type="submit" class="btn btn-info btn-block" (click)="reset()">Resetar</button>
+        <button type="submit" class="btn btn-info btn-block" (click)="reset()">Resetar</button>&nbsp; 
+        <button type="submit" class="btn btn-danger btn-block" [routerLink]="'login'">Cancelar</button> 
       </ng-container>
       <ng-container *ngIf="showResetOptions">
-        <div class="form-group">
-          <input type="password" class="form-control" name="inputEmail3" [(ngModel)]="user.email" name="email" id="signin-email"
-            placeholder="Nova senha" autocomplete="off">
+        <div class="col-md-12 text-center">
+          <label for="">Verifique seu e-mail para continuar</label>
         </div>
-        <div class="form-group">
-          <input type="password" class="form-control" name="inputEmail3" [(ngModel)]="user.email" name="email" id="signin-email"
-            placeholder="Confirme a senha" autocomplete="off">
-        </div>
-        <button type="submit" class="btn btn-info btn-block" (click)="reset()">Confirmar</button>
       </ng-container>
     </form>
   </div>
