--- a/src/app/components/reset-password-confirm/reset-password-confirm.component.html
+++ b/src/app/components/reset-password-confirm/reset-password-confirm.component.html
@@ -5,18 +5,15 @@
       <img src="../../../assets/imgs/academia.jpeg" width="40%" height="40%" alt="...">
     </div>
     <br>
-    <form>
-      <ng-container>
-        <div class="form-group">
-          <input type="password" class="form-control" [(ngModel)]="user.email" name="email" id="signin-email"
-            placeholder="Nova senha" autocomplete="off">
-        </div>
-        <div class="form-group">
-          <input type="password" class="form-control" [(ngModel)]="user.email" name="email" id="signin-email"
-            placeholder="Confirme a senha" autocomplete="off">
-        </div>
-        <button type="submit" class="btn btn-info btn-block" (click)="confirmReset()">Confirmar</button>
-      </ng-container>
-    </form>
+    <ng-container>
+      <div class="form-group">
+        <input type="password" class="form-control" [(ngModel)]="user.password" placeholder="Nova senha" autocomplete="off">
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" placeholder="Confirme a senha"
+          sautocomplete="off">
+      </div>
+      <button type="submit" class="btn btn-info btn-block" (click)="confirmReset()">Confirmar</button>
+    </ng-container>
   </div>
 </div>
