--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import '../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap';
 @import "./assets/bootstrap-sass/variables";
 @import '~ngx-toastr/toastr.css';
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 
 .link {
