--- a/src/app/components/food-register/food-register.component.scss
+++ b/src/app/components/food-register/food-register.component.scss
@@ -11,3 +11,20 @@
     padding: 15px 0;
     z-index: 9999;
 }
+
+.input-date {
+    z-index: 999 !important;
+    width: 100% !important;
+}
+
+.ngx-datepicker-calendar-container {
+    z-index: 999 !important;
+    .ngx-datepicker-position-bottom-right {
+        z-index: 999 !important;
+    }
+}
+
+.remove-food {
+    color: red !important;
+    cursor: pointer;
+}
