--- a/src/app/components/notification/openNotification/open-notification.component.html
+++ b/src/app/components/notification/openNotification/open-notification.component.html
@@ -2,36 +2,33 @@
     <div class="row">
         <!-- Titulo Fixo -->
         <div class="col-md-12">
-            <h2 align="center">Aulas de Sábado</h2>
+            <h2 align="center">{{notification?.title}}</h2>
         </div>
-        <div class="col-md-6">
-            <img src="../../../../assets/imgs/imgcapa.jpg" class="img-responsive img-rounded">
+        <div class="col-md-6" *ngIf="notification.mainImg">
+            <img [src]="notification.mainImg" class="img-responsive img-rounded">
             <br>
         </div>
         <!-- Texto padrão fixo -->
         <div class="col-md-6">
             <label align="center">
-                As novas aulas de body jump começaram a aparecer para serem inscritas no sabado, então fiquem de olho com essa novidade.
-                Segue o clique de uma boa musica para treino. Junto a foto da Samanta que faz 12 anos amanhã.
+                {{notification.description}}
             </label>
         </div>
     </div>
     <!-- Video no Youtube somente um, aparece e nao aparece conforme o usuario colocar ou não -->
     <!-- Fotos que usuario pode inserir, diversas -->
-    <div class="row">
+    <div class="row" *ngIf="notification.movie">
         <h4 align="center">Video</h4>
         <div class="col-md-12" align="center">
             <youtube-player [videoId]="id">
             </youtube-player>
         </div>
     </div>
-    <div align="center" class="row">
+    <div align="center" class="row" *ngIf="notification?.images && notification?.images?.length > 0">
         <h4>Àlbum</h4>
-        <div class="col-md-4">
-            <img src="../../../../assets/imgs/feliz.jpg" class="img-responsive img-rounded">
+        <div class="col-md-4" *ngFor="let image of notification.images">
+            <img [src]="image" class="img-responsive img-rounded">
             <br>
         </div>
     </div>
-
-
 </div>
